# greyline

./: .gitignore  CHANGELOG.md  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
nix/: gnome-vm-test.nix  hm-module.nix
systemd/: greyline.timer
tests/: smoke_render.py  test_backends.py  test_cli.py  test_config.py  test_gnome.py  test_render.py
worldtime/: __init__.py  __main__.py  config.py  configedit.py  default-config.toml  recipes.py  render.py  service.py
worldtime/backends/: __init__.py  gnome.py  hyprpaper.py  macos.py  windows.py
