[build-system]
requires = ["setuptools>=77"]       # PEP 639 SPDX license fields
build-backend = "setuptools.build_meta"

[project]
name = "greyline"
version = "0.4.0"
description = "A live, multi-timezone world-time desktop wallpaper for Wayland/X11."
readme = "README.md"
requires-python = ">=3.11"          # tomllib + zoneinfo (stdlib)
license = "GPL-2.0-or-later"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Jotham Lim Ee Chen" }]
keywords = ["wallpaper", "wayland", "sway", "hyprland", "timezone", "terminator", "greyline"]
dependencies = ["pillow>=9", "tomlkit>=0.11"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia :: Graphics",
]

[project.scripts]
greyline = "worldtime.__main__:main"

[project.urls]
Homepage = "https://github.com/cothinking-dev/greyline"
Repository = "https://github.com/cothinking-dev/greyline"
Issues = "https://github.com/cothinking-dev/greyline/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["worldtime", "worldtime.backends"]

[tool.setuptools.package-data]
# Explicit list (not assets/*.png) so locally-present IBM/Lenovo artwork is never packaged.
worldtime = ["assets/tux.png", "default-config.toml", "geodata/*.geojson"]
